--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <address>
                 <ul>
                     <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
     </header>
@@ -28,7 +28,7 @@
 
         <!--hero--> 
         <section>
-            <h1>Эффективные решения</br> для вашего бизнеса</h1>
+            <h1>Эффективные решения<br> для вашего бизнеса</h1>
             <button type="button">Заказать услуг</button>
         </section>
         <section>
